--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,36 @@
 .App {
   text-align: center;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
 }
 
-.App-logo {
+.App-logo0 {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-logo1 {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+.App-logo-1 {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .App-logo1 {
+    animation: App-logo-spin infinite 5s linear;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  .App-logo-1 {
+      animation: App-logo-spin-reverse infinite 1s linear;
+    }
 }
 
 .App-link {
@@ -35,4 +44,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@keyframes App-logo-spin-reverse {
+  from {
+    transform: rotate(360deg);
+  }
+
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+.grid-button{
+  justify-content: center;
 }
