--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  position: absolute;
   text-align: center;
   display: flex;
   width: 100%;
@@ -6,6 +7,7 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: row;
+  margin: 0;
 }
 
 .App-logo0 {
@@ -25,11 +27,11 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo1 {
-    animation: App-logo-spin infinite 5s linear;
+    animation: App-logo-spin infinite 10s linear;
   }
 
   .App-logo-1 {
-      animation: App-logo-spin-reverse infinite 1s linear;
+      animation: App-logo-spin-reverse infinite 10s linear;
     }
 }
 
@@ -58,4 +60,26 @@
 
 .grid-button{
   justify-content: center;
+}
+
+.servo, .registro, .motor {
+  width: 30%;
+  height: auto;
+}
+
+.imageServo{
+  width: 80%;
+  height: 500px;
+  background-image: url('../public/BaseMotor.png');
+  background-size: cover;
+}
+
+.imageServoimg{
+    height: 500px;
+}
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
